new file:   ../../arterial/doc/print_status_column_desc.txt Output of ab3418_lib.c's print_status function
new file:   ../../arterial/system/data_file_2_database.sh
Parses and writes binary ab3418 data file to db variable

modified:   ../../arterial/doc/Arterial_signal_IP_addresses.txt
Added Database Variable column

modified:   ../doc/cradlepoint_ip_addrs.txt
Added column for number of onramp lanes. Don't remember why.

modified:   Makefile
Added linking of ab3418_lib.o since it has print_status function definition

modified:   clt_vars.c
modified:   clt_vars.h
Added arterial db vars

modified:  ../system/restart_system
Added data_file_2_database.sh startup, for reading arterial data file
Changed target directory for ramp metering data
Turned off RM control
Turned off opt_crm control of arterial controllers (set -d debug option)

modified:   ../system/urmsgo_all
Turned off RM control
Commented out opt_crm startup; it's now in restart system

--- a/ramp_metering/src/Makefile
+++ b/ramp_metering/src/Makefile
@@ -17,6 +17,7 @@ PATH_OBJS += $(OBJDIR)/simp1.o
 PATH_OBJS += $(OBJDIR)/simp2.o
 PATH_OBJS += $(OBJDIR)/simp3.o
 PATH_OBJS += $(OBJDIR)/simplx.o
+PATH_OBJS += /home/atsc/ab3418/lnx/ab3418_lib.o
 #cc  opt_crm.c nrutil2.c simp1.c simp2.c simp3.c simplx.c -o crm_test
 
 PATH_LDFLAGS += -L./lnx -L$(ATSC_LIB_DIR)
