--- a/ramp_metering/src/Makefile
+++ b/ramp_metering/src/Makefile
@@ -22,7 +22,7 @@ PATH_OBJS += /home/atsc/ab3418/lnx/ab3418_lib.o
 
 PATH_LDFLAGS += -L./lnx -L$(ATSC_LIB_DIR)
 
-EXEC =  $(OBJDIR)/replay_general $(OBJDIR)/wrfiles_rm $(OBJDIR)/clt_vars $(OBJDIR)/opt_crm
+EXEC =  $(OBJDIR)/replay_general $(OBJDIR)/wrfiles_rm $(OBJDIR)/clt_vars $(OBJDIR)/opt_crm $(OBJDIR)/db_set_pattern
 
 all: 	$(OBJDIR) $(PATH_OBJS) $(EXEC)
 	/usr/bin/crontab -l >/home/sj_i680_capitol/ramp_metering/system/crontab.txt
