modified:   Makefile Gave crontab copy its own make
modified:   db_set_pattern.c
Added -f blah to ab3418comm call
Added db_clt_read of all db_set_pattern patterns
Deleted clt_ipc_receive comment

modified:   opt_crm.c
Added FREE_PATTERN define
Initialize local db_set_pattern array to FREE_PATTERN
Added db_clt_write of db_set_pattern instead of arterial_desc[i].ctl_state
Also print db_set_pattern to log file instead of arterial_desc[i].ctl_state

modified:   resource.c
Removed controller_data2->queue_stat[i][j].vol > 0 condition in
occupancy_aggregation_onramp_queue (if a vehicle just sits on a loop, it CAN
register no flow and 99.9% occupancy and good status bit

modified:   ../system/restart_system
Changed the single redirection arrow ('>') to double ('>>') for logfiles

modified:   ../system/stopsystem
Added killall db_set_pattern

modified: ../system/urmsgo
Changed log file to add IP address

modified:   ../system/urmsgo_all_test
Changed IP adress to San Jose subnet so all the nodes are on the same subnet

--- a/ramp_metering/src/Makefile
+++ b/ramp_metering/src/Makefile
@@ -25,6 +25,8 @@ PATH_LDFLAGS += -L./lnx -L$(ATSC_LIB_DIR)
 EXEC =  $(OBJDIR)/replay_general $(OBJDIR)/wrfiles_rm $(OBJDIR)/clt_vars $(OBJDIR)/opt_crm $(OBJDIR)/db_set_pattern
 
 all: 	$(OBJDIR) $(PATH_OBJS) $(EXEC)
+
+crontab:
 	/usr/bin/crontab -l >/home/sj_i680_capitol/ramp_metering/system/crontab.txt
 
 $(OBJDIR):
